# university

MillionaireGame/: CMakeLists.txt  gameengine.cpp  gameengine.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  gamewindow.ui.autosave  main.cpp  mainwindow.cpp  question.h  questionmanager.cpp  questionmanager.h  startwindow.cpp  startwindow.h  startwindow.ui  styles.cpp  styles.h  wallet.h
task3/: task3.slnx
task3/task3/: Calculator.cs  Program.cs  WeatherForecast.cs  task3.http
task3/task3/Controllers/: WeatherForecastController.cs
task3/task3/Properties/: launchSettings.json
task33/: task33.slnx
task33/task33/: Calculator.cs  Dockerfile  Program.cs
task33/task33/task33/: task33.csproj  task33.http
task33/task33/task33/Properties/: launchSettings.json
